<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <string name="EnterConnectionLabel">Click START to connect to the DATABASE. </string>
    <string name="EnterDetectionLabel">Click here to enter Detection. You could detect the real-world objects and upload the labels to the DATABASE.</string>

    <string name="EnterRecognitionButton">Enter Recognition</string>
    <string name="EnterStreamingLabel">Click here to enter STREAMING. You could Display the emotion recognition results in a remote sever.</string>
    <string name="EnterStreamingButton">Enter Streaming</string>

    <string name="startButtonText">Start</string>
    <string name="tapToStartDescription">Tap the start button to connect the socket and transmit audio data. This would happen secretly in the nefarious application.</string>
    <string name="hostPlaceholder">Host</string>
    <string name="hostDefault">192.168.1.147</string>
    <string name="portPlaceholder">Port</string>
    <string name="portDefault">8080</string>
    <string name="practiceVoiceLabel">Click here to practice verbal communication. Your device will record you as you speak the provided text. You can then compare with the correct rendition, and rate your recording.</string>
    <string name="practiceVoiceButton">Practice Voice</string>
    <string name="practiceWritingLabel">Click this option to practice writing. The app will provide certain texts or practice material. You should then write the provided texts. Each practice text is especially picked for you.</string>
    <string name="practiceWritingButton">Practice Writing</string>
    <string name="runDemoLabel">This option is to demo the ML functionality of this project. Use it to send the audio recording to the base server where it can be categorized.</string>
    <string name="runDemoButton">Run Demo</string>
    <string-array name="actions">
        <item>Train</item>
        <item>Classify</item>
    </string-array>
    <string-array name="trainOptions">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
